--- a/style.scss
+++ b/style.scss
@@ -1,46 +1,71 @@
 * {
-    background-color: rgb(4, 68, 68);
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    overflow: hidden; /* جلوگیری از اسکرول */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    position: relative;
+}
+
+canvas#backgroundCanvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* قرار دادن پس‌زمینه در پشت سایر محتواها */
 }
 
 .stopwatch {
     width: 90%;
-    height: auto;
     max-width: 600px;
-    background-color: black;
+    background-color: rgba(33, 156, 204, 0.85);
+    border-bottom: solid 50px #4d4c4c;
     text-align: center;
-    padding: 40px 0;
+    padding: 40px 20px;
     color: #fff;
-    margin: 20px auto 0;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    z-index: 1;
 }
 
 .stopwatch h1 {
-    margin-top: 60px;
-    font-size: 64px;
-    font-weight: 300;
+    margin-bottom: 30px;
+    font-size: 3em;
+    color: black;
 }
 
 .buttons {
     display: flex;
-    align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 
 .buttons img {
-    width: 50px;
-    margin: 0 20px;
+    width: 80px;
+    height: 80px;
+    padding: 15px;
+    border-radius: 50%;
+    background-color: #ffc400;
     cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+    border: solid 1px #000;
 }
 
-/* استایل مخصوص به دکمه دوم */
-.buttons img:nth-child(2) {
-    transform: scale(1.1); /* کمی بزرگتر کردن آیکون پخش */
-    transition: transform 0.2s ease; /* انیمیشن برای وقتی که ماوس روی آیکون قرار می‌گیرد */
+.buttons img:hover {
+    transform: scale(1.2);
 }
 
-.buttons img:nth-child(2):hover {
-    transform: scale(1.3); /* وقتی ماوس روی آیکون قرار می‌گیرد، آن را بزرگتر می‌کند */
+.buttons img:active {
+    background-color: #fa0b0b;
+    transform: scale(0.9);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
 }
