--- a/style.scss
+++ b/style.scss
@@ -26,8 +26,9 @@ canvas#backgroundCanvas {
 
 .stopwatch {
     width: 90%;
-    max-width: 600px;
-    background-color: rgba(33, 156, 204, 0.85);
+    max-width: 700px;
+    height: auto;
+    background-color: rgba(33, 156, 204, 0.95);
     border-bottom: solid 50px #4d4c4c;
     text-align: center;
     padding: 40px 20px;
@@ -68,4 +69,6 @@ canvas#backgroundCanvas {
     background-color: #fa0b0b;
     transform: scale(0.9);
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
-}
+    
+    }
+
